fixed map spacing on index to show correctly on mobile

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -16,10 +16,6 @@ body {
     height: 100vh;
 }
 
-.local-routes-heading {
-    position: absolute;
-    z-index: 2;
-}
 
 .home-heading, .route-heading {
     display: inline-block;
@@ -31,18 +27,20 @@ body {
 }
 
 .map-pic-route {
-    margin-bottom: 100px;
     margin: 10px;
+
+    margin-bottom: 150px;
     border: 1px solid gold;
 }
 
 .map-pic-park {
     margin-bottom: 30px;
+    margin-top: 80px;
     border: 1px solid gold;
+    width: 100%;
 }
 
 .park-map-div {
-    float: right;
     margin-bottom: 100px;
 }
 
@@ -106,7 +104,7 @@ footer {
     margin-top: 5px;
 }
 
-.srt-pic-div, .which-way-pic, .route-end-div, .start-pic, .signup-pic-div, .login-pic-div {
+.local-routes-heading, .srt-pic-div, .which-way-pic, .route-end-div, .start-pic, .signup-pic-div, .login-pic-div, .park-map-div {
     position: absolute;
     z-index: 2;
 }
@@ -138,7 +136,7 @@ footer {
         margin-bottom: 0;
     }
 
-    .local-routes-heading, .srt-pic-div, .which-way-pic, .route-end-div, .start-pic, .signup-pic-div, .login-pic-div  {
+    .local-routes-heading, .srt-pic-div, .which-way-pic, .route-end-div, .start-pic, .signup-pic-div, .login-pic-div, .park-map-div  {
         position: relative;
         z-index: 0;
     }
@@ -167,7 +165,7 @@ footer {
       margin-bottom: 150px;
   }
 
-  .leg-pic-div, .edit-pic-div, .signup-pic-div, .login-pic-div, .srt-pic-div {
+  .leg-pic-div, .edit-pic-div, .signup-pic-div, .login-pic-div, .srt-pic-div, .map-pic-park {
       margin-top: 10px;
   }
 
